package com.medihelp.prescription.entity;

import jakarta.persistence.*;
import lombok.AllArgsConstructor;
import lombok.Builder;
import lombok.Data;
import lombok.NoArgsConstructor;
import org.hibernate.annotations.CreationTimestamp;
import org.hibernate.annotations.UpdateTimestamp;

import java.time.Instant;
import java.util.UUID;

@Entity
@Table(name = "appointments")
@Data
@Builder
@NoArgsConstructor
@AllArgsConstructor
public class Appointment {

    @Id
    @GeneratedValue(strategy = GenerationType.UUID)
    private UUID id;

    @Column(nullable = false)
    private UUID userId;

    @Column(nullable = false)
    private String doctorName;

    private String hospital;
    private String specialization;
    private String purpose;

    @Column(nullable = false)
    private Instant scheduledAt;

    @Builder.Default
    private String status = "UPCOMING";

    private String notes;

    // CONSULTATION (default) | FOLLOW_UP | THERAPY | CHECKUP
    @Builder.Default
    private String type = "CONSULTATION";

    @Builder.Default
    private Boolean reminderSent = false;

    @CreationTimestamp
    private Instant createdAt;

    @UpdateTimestamp
    private Instant updatedAt;
}
